# SprocketForge

./: README.md  functions.py  lint.yml  main.py  plans.md  pyproject.toml  sfedit.py
docs/: plans.md
sfedit/: functions.py  sfedit.py
sfedit/legacy code/: sta_main.py
sfedit/test blueprints/: ST8.blueprint
src/sfedit/: functions.py  sfedit.py
src/sprocketforge/: forge.py  functions.py
