[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sfedit"
version = "0.3.1"
authors = [
  { name="thxlxn" },
]
description = "A simple app for .blueprint file modifications in Sprocket"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/thxlxn/SFEDIT"
"Bug Tracker" = "https://github.com/thxlxn/SFEDIT/issues"

[tool.setuptools.packages.find]
where = ["src"]
