[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprocketforge"
version = "0.4.0"
authors = [
  { name="thxlxn" },
]
description = "A simple app for .blueprint file modifications in Sprocket"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/thxlxn/SprocketForge"
"Bug Tracker" = "https://github.com/thxlxn/SprocketForge/issues"

[tool.setuptools.packages.find]
where = ["src"]
